# Hello.Python.FuncApp

./: README.md  function_app.py  host.json  requirements.txt  run.http
.github/workflows/: cant-deploy-python-function-with-the-module_func-ryhillpython.yml
app/: function_app.py  requirements.txt
app/.github/workflows/: cant-deploy-python-function-with-the-module_func-ryhillpython.yml
modules/subspace/: pyproject.toml  setup.py
modules/subspace/src/: communication.py
modules/subspace/src/subspace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
